--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "file-loader": "^3.0.1",
+    "url-loader": "^1.1.2"
   }
 }
